welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: '<-' expected but ')' found.
  for (m<0 to getMondeLargeur()){
                               ^Array1:7: error: illegal start of simple expression
}
^Array1:12: error: ';' expected but '=' found.
    T[i]=getCouleurSol()
        ^