welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  col1()
  for (m<0 to getMondeLargeur()){
    col(m)
  }
}

def col1(){
  var T= new Array[Color](getMondeHauteur())
  for (i<-1 to getMondeHauteur()){
    T[i]=getCouleurSol()
    avance()
    left()
    avance()
    right()
  }
}

def col(nbr:Int){
  for (l<-1 to nbr){
    avance()
  }
  for (l<-1 to getMondeHauteur()){
    setCouleurBrosse(T(l))
    baissebrosse()
    leveBrosse()
    avance()
  }
  
}